Dark mode border fixes

--- a/assets/css/_sass/_utilities.scss
+++ b/assets/css/_sass/_utilities.scss
@@ -21,7 +21,7 @@
 	}
 }
 
-.brighten-5 {
+.scale-1 {
 	&:hover {
 		transform: scale(1.01);
 		transform-style: preserve-3d;
