--- a/assets/css/_sass/modules/_work.scss
+++ b/assets/css/_sass/modules/_work.scss
@@ -19,7 +19,9 @@
 
 	blockquote {
 		font-size: 18px;
-		color: $gray-600;
+		background: $gray-800;
+		border-color: $gray-700;
+		color: $gray-300;
 		margin-bottom: 0;
 		margin-top: 32px;
 	}
